improved twitter image displaying